--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -1,13 +1,21 @@
 ---
+import logo from '../assets/logo.svg';
+import '../styles/global.css';
 ---
 
-<nav class="navigation">
-  <ul>
-    <li><a href="/">Home</a></li>
-    <li><a href="/about">About</a></li>
-    <li><a href="/services">Services</a></li>
-    <li><a href="/blog">Blog</a></li>
-    <li><a href="/contact">Contact</a></li>
-  </ul>
-</nav>  
+    <nav class="shadow-sm w-full fixed top-0 left-0 right-0 bg-white z-50">
+        <div class="container mx-auto flex justify-between items-center py-4">
+            <div class="text-2xl font-bold">
+                <a href="/"><span><img src={logo.src} alt="Logo" width="100" height="100" class="inline-block"></span></a>
+            </div>
+            <div class="flex items-center space-x-8">
+                <a href="/" class="text-gray-600 hover:text-gray-800">Home</a>
+                <a href="/about" class="text-gray-600 hover:text-gray-800">About</a>
+                <a href="/services" class="text-gray-600 hover:text-gray-800">Services</a>
+                <a href="/blog" class="text-gray-600 hover:text-gray-800">Blog</a>
+                <a href="/contact" class="text-gray-600 hover:text-gray-800">Contact</a>
+        </div>
+    </nav> 
+
+ 
 
