--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,1 +1,30 @@
+@import url('https://fonts.googleapis.com/css2?family=Forum&family=Noto+Sans:ital,wght@0,100..900;1,100..900&family=Urbanist:ital,wght@0,100..900;1,100..900&display=swap');
 @import 'tailwindcss';
+
+:root {
+    --font-noto: 'Noto Sans', sans-serif;
+    --font-roboto: 'Roboto', sans-serif;
+    --font-poppins: 'Poppins', sans-serif;
+    --color-semi-white: #fcffff;
+    --color-gray-dark: #333;
+    --color-black: #000;
+    --color-primary: #0075bc;
+    --color-blue-link: #2214e0;
+}
+
+html{
+    background-color: var(--color-semi-white);
+    font-family: var(--font-noto);
+    color: var(--color-gray-dark);
+    font-size: 16px;
+    font-weight: 400;
+}
+
+body{
+    margin: 0 auto;
+    width: 100%;
+    max-width: 50ch;
+    padding: 1rem;
+    line-height: 1.5;
+}
+
