add navbar and banner to index

--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -4,7 +4,7 @@ import '../styles/global.css';
 ---
 
     <nav class="shadow-sm w-full fixed top-0 left-0 right-0 bg-white z-50">
-        <div class="container mx-auto flex justify-between items-center py-4">
+        <div class="w-full px-4 flex justify-between items-center py-4">
             <div class="text-2xl font-bold">
                 <a href="/"><span><img src={logo.src} alt="Logo" width="100" height="100" class="inline-block"></span></a>
             </div>
