--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,7 @@
 ---
 //import Welcome from '../components/Welcome.astro';
 import Layout from '../layouts/Layout.astro';
+import background from '../assets/bgtech.svg';
 import '../styles/global.css';
 
 // Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
@@ -9,5 +10,14 @@ import '../styles/global.css';
 
 <Layout>
 	{/* <Welcome /> */}
-	<h1>Hello, world!</h1>
+	<div class="relative w-full h-screen">
+		<div class="absolute inset-0 -z-10">
+			<img src={background.src} alt="Background" class="w-full h-full object-cover" />
+		</div>
+		<div class="relative z-50 flex flex-col items-center justify-center h-full space-y-6 text-center pt-14">
+			<h1 class="text-6xl font-bold mb-4 text-white" style="font-family: 'Poppins', serif;">Ephemeral</h1>
+			<p class="text-xl mb-8 text-white" style="font-family: 'Noto Sans', sans-serif;">Your Gateway to Temporary Email Solutions</p>
+			<a href="/services" class="px-6 py-3 bg-blue-600 text-white rounded-lg hover:bg-blue-700 transition" style="font-family: 'Urbanist', sans-serif;">Get Started</a>
+		</div>
+	</div>
 </Layout>
