change class in img

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,7 +12,7 @@ import '../styles/global.css';
 	{/* <Welcome /> */}
 	<div class="relative w-full h-screen">
 		<div class="absolute inset-0 -z-10">
-			<img src={background.src} alt="Background" class="w-full h-full object-cover" />
+			<img src={background.src} alt="Background" class="w-full h-full object-fill" />
 		</div>
 		<div class="relative z-50 flex flex-col items-center justify-center h-full space-y-6 text-center pt-14">
 			<h1 class="text-6xl font-bold mb-4 text-white" style="font-family: 'Poppins', serif;">Ephemeral</h1>
