--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -2,18 +2,17 @@
 import logo from '../assets/logo.svg';
 import '../styles/global.css';
 ---
-
-    <nav class="shadow-sm w-full fixed top-0 left-0 right-0 bg-white z-50">
+    <nav class="shadow-sm w-full fixed top-0 left-0 right-0 bg-(--color-semi-white) z-50">
         <div class="w-full px-4 flex justify-between items-center py-4">
-            <div class="text-2xl font-bold">
-                <a href="/"><span><img src={logo.src} alt="Logo" width="100" height="100" class="inline-block"></span></a>
+            <div class="flex items-center space-x-2">
+                <a href="/"><span><img src={logo.src} alt="Logo" class="md:w-1/2 inline-block"></span></a>
             </div>
             <div class="flex items-center space-x-8">
                 <a href="/" class="text-gray-600 hover:text-gray-800">Home</a>
-                <a href="/about" class="text-gray-600 hover:text-gray-800">About</a>
-                <a href="/services" class="text-gray-600 hover:text-gray-800">Services</a>
-                <a href="/blog" class="text-gray-600 hover:text-gray-800">Blog</a>
-                <a href="/contact" class="text-gray-600 hover:text-gray-800">Contact</a>
+                <a href="/about/" class="text-gray-600 hover:text-gray-800">About</a>
+                <a href="/services/" class="text-gray-600 hover:text-gray-800">Services</a>
+                <a href="/blog/" class="text-gray-600 hover:text-gray-800">Blog</a>
+                <a href="/contact/" class="text-gray-600 hover:text-gray-800">Contact</a>
         </div>
     </nav> 
 
