--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,9 +1,8 @@
 ---
 //import Welcome from '../components/Welcome.astro';
 import Layout from '../layouts/Layout.astro';
-import background from '../assets/bgtech.svg';
 import '../styles/global.css';
-import Banner from '../components/PrincipalBanner.astro';
+import BannerPrincipal from '../components/PrincipalBanner.astro';
 import Aboutus from '../components/Info.astro';
 
 // Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
@@ -11,7 +10,7 @@ import Aboutus from '../components/Info.astro';
 ---
 
 <Layout>
-	<Banner />
+	<BannerPrincipal />
 	<Aboutus 
 	title="About Us",
 	description = "At Ephemeral SL, we are experts in the development of computer systems and applications designed to solve the most complex technological challenges. Since our founding in 2000, we have worked with leading companies in the industry, providing innovative solutions that drive efficiency and competitiveness.",
