--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -14,6 +14,7 @@
 
 html{
     background-color: var(--color-semi-white);
+    background-image: url('/src/assets/imgbackground.jpg') repeat cover;
     font-family: var(--font-noto);
     color: var(--color-gray-dark);
     font-size: 1rem;
