Add bg in service page

--- a/src/components/Banner.astro
+++ b/src/components/Banner.astro
@@ -1,5 +1,5 @@
 ---
-const {backgroundImage = '/src/assets/bgtech.svg', Title = 'Our Services', Description = 'Discover our range of services designed to help your business thrive in the digital age.'} = Astro.props;
+const {backgroundImage = '/src/assets/bg2.jpg', Title = 'Our Services', Description = 'Discover our range of services designed to help your business thrive in the digital age.'} = Astro.props;
 ---
 <div class="relative w-full h-screen">
     <div class="absolute inset-0 -z-10">
