add service component to index

--- a/src/components/Services.astro
+++ b/src/components/Services.astro
@@ -54,10 +54,9 @@ const servicesData = [
     }
 ];
 ---
-<Banner />
-<div class="min-h-screen pt-24 px-4 bg-white">
+<div class="min-h-screen pt-4 px-4 bg-white">
     <div class="max-w-7xl mx-auto">
-        <h2 class="text-4xl font-bold text-gray-800 mb-8 text-center">Get to know our services and solutions</h2>
+        <h2 class="text-4xl font-bold text-gray-800 mb-6 pb-6 text-center">Get to know our services and solutions</h2>
         <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-8">
             {servicesData.map((service) => (
                 <Cards 
