--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -4,8 +4,8 @@ import Layout from '../layouts/Layout.astro';
 
 <Layout pageTitle="About Us - Ephemeral SL">
     <div class="min-h-screen pt-24 px-4">
-        <div class="max-w-4xl mx-auto">
-            <h1 class="text-4xl font-bold text-gray-800 mb-8">About Ephemeral SL</h1>
+        <div class="min-h-screen mx-auto">
+            <h1 class="text-4xl font-bold text-gray-800 mb-8 text-center">About Ephemeral SL</h1>
             <div class="prose prose-lg">
                 <p class="text-gray-600 mb-6">
                     At Ephemeral, we are experts in the development of computer systems and applications 
