--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -2,10 +2,10 @@
 import Layout from '../layouts/Layout.astro';
 ---
 
-<Layout pageTitle="About Us - Ephemeral SL">
+<Layout pageTitle="About Us - Ephemeral">
     <div class="min-h-screen pt-24 px-4">
         <div class="min-h-screen mx-auto">
-            <h1 class="text-4xl font-bold text-gray-800 mb-8 text-center">About Ephemeral SL</h1>
+            <h1 class="text-4xl font-bold text-gray-800 mb-8 text-center">About Ephemeral</h1>
             <div class="prose prose-lg">
                 <p class="text-gray-600 mb-6">
                     At Ephemeral, we are experts in the development of computer systems and applications 
@@ -16,9 +16,6 @@ import Layout from '../layouts/Layout.astro';
                 <p class="text-gray-600 mb-6">
                     We are a team of passionate developers dedicated to creating innovative technology solutions.
                 </p>
-                <div class="mt-8">
-                    <a href="/" class="text-blue-600 hover:text-blue-800 underline">← Back to Home</a>
-                </div>
             </div>
         </div>
     </div>
