--- a/src/pages/services.astro
+++ b/src/pages/services.astro
@@ -1,7 +1,21 @@
 ---
 import Banner from '../components/Banner.astro';
 import Layout from '../layouts/Layout.astro';
+import background from '../assets/bg2.jpg';
+import ServicesComponent from '../components/Services.astro';
+
+const {
+    backgroundImage = background,
+    Title = "Our Services",
+    Description = "Discover our range of services designed to help your business thrive in the digital age."
+} = Astro.props;    
 ---
 <Layout pageTitle="Services - Ephemeral SL">
-    <Banner />
+    <Banner
+        backgroundImage={backgroundImage}
+        Title={Title}
+        Description={Description}
+    />
+    <div class=" mx-auto p-4"></div>
+    <ServicesComponent />
 </Layout>
