--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -1,17 +1,21 @@
 ---
 import Layout from '../layouts/Layout.astro';
+import inprogrees from '../assets/in-progress.svg';
 ---
 <Layout pageTitle="Blog - Ephemeral">
     <div class="min-h-screen pt-24 px-4">
         <div class="max-w-4xl mx-auto">
-            <h1 class="text-4xl font-bold text-gray-800 mb-8">Contact</h1>
-            <div class="prose prose-lg">
+           <h1 class="text-4xl font-bold text-gray-800 mb-8 text-center">In progress</h1>
+           <!-- <div class="prose prose-lg">
                 <p class="text-gray-600 mb-6">
                     Welcome to the Ephemeral blog! Here, we share insights, updates, and articles on the latest trends in technology, software development, and industry best practices. Stay tuned for expert advice and thought leadership from our team of passionate developers.
                 </p>
                 <div class="mt-8">
                     <a href="/" class="text-blue-600 hover:text-blue-800 underline">← Back to Home</a>
                 </div>
-            </div>
+            </div>-->
+            <img src={inprogrees.src} alt="Contact Us" class="w-auto h-1/3 rounded-lg shadow-md mb-8 py-4"/>
         </div>
     </div>
+    
+</Layout>
