--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,21 +1,23 @@
 ---
-//import Welcome from '../components/Welcome.astro';
 import Layout from '../layouts/Layout.astro';
 import '../styles/global.css';
-import BannerPrincipal from '../components/PrincipalBanner.astro';
+import DynamicBanner from '../components/DynamicBanner.astro';
 import Aboutus from '../components/Info.astro';
 import Services from '../components/Services.astro';
-
-// Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
-// Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
 ---
 
-<Layout pageTitle="Home - Ephemeral" class="bg-[var(--color-semi-white)] bg-[url('../assets/imgbackground.jpg')] bg-cover bg-center bg-repeat">
-	<BannerPrincipal />
+<Layout pageTitle="Home - Ephemeral">
+	<DynamicBanner 
+		pageType="home"
+		title="Customized Tecnology Solutions to Boost Your Business"
+		description="Innovative technology solutions for the modern world. We create powerful software and systems that drive your business forward."
+		ctaText="Request a free consultation"
+		ctaLink="#services"
+	/>
 	<Aboutus 
-	title="About Us",
-	description = "At Ephemeral, we are experts in the development of computer systems and applications designed to solve the most complex technological challenges. Since our founding in 2017, we have worked with leading companies in the industry, providing innovative solutions that drive efficiency and competitiveness.",
-	description2="We are a team of passionate developers dedicated to creating innovative technology solutions."
+		title="About Us"
+		description="At Ephemeral, we are experts in the development of computer systems and applications designed to solve the most complex technological challenges. Since our founding in 2017, we have worked with leading companies in the industry, providing innovative solutions that drive efficiency and competitiveness."
+		description2="We are a team of passionate developers dedicated to creating innovative technology solutions."
 	/>
 	<Services />
 </Layout>
