add pt to info component

--- a/src/components/Info.astro
+++ b/src/components/Info.astro
@@ -3,7 +3,7 @@ const {title, description, description2} = Astro.props;
 ---
 
 <section class="pattern-background py-8">
-    <div class="max-w-4xl mx-auto p-8 text-center">
+    <div class="max-w-4xl mx-auto p-8 pt-14 text-center">
         <h2 class="text-4xl font-bold pb-4 mb-8 text-heading font-roboto">{title}</h2>
         <div class="max-w-3xl mx-auto space-y-6">
             <p class="text-lg leading-relaxed text-gray-700">{description}</p>
