update cards component

--- a/src/components/Services.astro
+++ b/src/components/Services.astro
@@ -1,6 +1,6 @@
 ---
 import '../styles/global.css';
-import Cards from '../components/cards/serv1.astro';
+import Cards from '../components/cards/cards.astro';
 import { serviceIcons } from '../assets/index.ts';
 
 // Configuración de servicios con descripción personalizada
