Add section reasons choose ephemeral

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -34,6 +34,11 @@ const homeBg = backgroundAssets.home;
 	description2 = "Our commitment to quality, innovation, and customer satisfaction sets us apart in the tech industry."
 	/>
 	<Brands />
+	<Info
+	    title = "Reasons for our customers trust us "
+		description = "We combine innovation, security, and proven acexpertise to deliver solutions that truly make a difference."
+		description2 = "Our clients choose us because we don’t just provide technology, we deliver peace of mind, efficiency, and a competitive edge. Every solution is crafted with a deep understanding of our clients’ unique challenges, ensuring results that last and grow with them."
+		/>
 </Layout>
 
 <style>
